# nakOS

./: Cargo.toml  Makefile  run.bat  run.sh  target.json
.cargo/: config.toml
boot/: .gitignore  Makefile  bochsrc  boot.asm  boot2.asm  bootloader.ld  build.ld  commonboot.asm  enable_a20.asm  gdt.asm  kernel_bootstrap.asm  log.asm
src/: lib.rs  vga.rs
