[package]
name = "nakOS"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "nakOS"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true